<resources>
    <string name="app_name">Training Joe</string>
    <string name="login">Login</string>
    <string name="user">User :</string>
    <string name="password">Password :</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="have_space">Have Space</string>
    <string name="massage_have_space">Please Fill All Blank</string>
    <string name="title_user_false">ไม่มี user นี่้</string>
    <string name="message_user_false">ไม่มี User นี่ใจ ฐานข้อมูลของเรา</string>
    <string name="title_pass_false">Password False</string>
    <string name="message_pass_false">Please Try Again Password False</string>
</resources>
